typescript/checker/tests/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration5.ts.stderr
error: UndefinedSymbol {
    sym: Atom('A' type=inline),
    span: Span {
        lo: BytePos(
            16,
        ),
        hi: BytePos(
            17,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration5.ts:1:17
  |
1 | class C extends A implements B implements C {
  |                 ^

error: UndefinedSymbol {
    sym: Atom('B' type=inline),
    span: Span {
        lo: BytePos(
            29,
        ),
        hi: BytePos(
            30,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration5.ts:1:30
  |
1 | class C extends A implements B implements C {
  |                              ^

error: TS1175
 --> $DIR/tests/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration5.ts:1:32
  |
1 | class C extends A implements B implements C {
  |                                ^^^^^^^^^^

